# shorty

./: README.md
benchmarks/: load_test.js  report.html
infra/: Caddyfile  docker-compose.yml
src/Shorty.Engine/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
src/Shorty.Engine/src/: cache.rs  db.rs  main.rs  repository.rs  router.rs  state.rs
src/Shorty.Frontend/: Dockerfile  package-lock.json  package.json
src/Shorty.Frontend/app/: error.tsx  layout.tsx  not-found.tsx
src/Shorty.Frontend/app/[alias]/: page.tsx
src/Shorty.Frontend/app/dashboard/: actions.ts  page.tsx
src/Shorty.Frontend/app/home/: actions.ts  page.tsx
src/Shorty.Frontend/app/login/: actions.ts  page.tsx
src/Shorty.Frontend/app/signup/: actions.ts  page.tsx
src/Shorty.Frontend/app/verify-email/: page.tsx
src/Shorty.Frontend/components/: Navbar.tsx
src/Shorty.Frontend/lib/: metadata.ts
src/Shorty.Management/: .gitignore  Shorty.Management.slnx
src/Shorty.Management/Shorty.Management.Api/: Dockerfile  Program.cs  Shorty.Management.Api.csproj
src/Shorty.Management/Shorty.Management.Api/Extensions/: DbExtensions.cs  FeatureExtensions.cs  HttpExtensions.cs  JsonExtensions.cs  SecurityExtensions.cs
src/Shorty.Management/Shorty.Management.Api/Filters/: ValidationFilter.cs
src/Shorty.Management/Shorty.Management.Domain/: Shorty.Management.Domain.csproj
src/Shorty.Management/Shorty.Management.Infrastructure/: Configure.cs  Shorty.Management.Infrastructure.csproj
src/Shorty.Management/Shorty.Management.Worker/: Dockerfile  Program.cs  Shorty.Management.Worker.csproj
(+87 files in other folders)
